# Pupe_

./: .gitignore  build.ninja.m4  build.sh  x
res/: _pspy_1  binder.c  busd  busybox  gins.sh  init.m4  org.pupe.Run.yml  pty.py  pupe.cpp  pupe.te  pupec.m4  start.sh  tester.c
res/Pupe/: CMakeLists.txt  Pupe.cpp  tuple.cpp
res/automacy/: automacy.go
res/av/: av.go
res/etc/pupe-node/: Dockerfile.m4
res/lib/: libcc1.so.0.0.0  libctf-nobfd.so.0.0.0  libctf.so.0.0.0  libgphobos.spec  libitm.so.1.0.0
res/lib/gcc/x86_64-alpine-linux-musl/9.3.0/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
res/lib/gcc/x86_64-alpine-linux-musl/9.3.0/plugin/include/: auto-host.h  configargs.h  options.h  tm-preds.h
res/lib/gcc/x86_64-alpine-linux-musl/9.3.0/plugin/include/config/: gnu-user.h  linux.h
res/lib/gcc/x86_64-alpine-linux-musl/9.3.0/plugin/include/config/i386/: gnu-user64.h
res/pc2/: CMakeLists.txt  pc2.cpp
res/plugy/: plugy.go
res/shsrvr/: shsrvr.go
